Resized calculator to accommodate for new buttons and fixed overflow/underflow bug

--- a/styles.css
+++ b/styles.css
@@ -4,18 +4,26 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-color: rgb(49, 49, 49);
 }
 
 button {
     width: 60px;
-    height: 60px;
+    height: 80px;
     font-size: 20px;
+}
+
+button#backspace,
+button#mrc,
+button#sign,
+button#equals {
+    height: 34px;
 }
 
 .calculator {
     background-color: rgb(217, 217, 217);
     width: 300px;
-    height: 450px;
+    height: 540px;
     display: flex;
     flex-direction: column;
 }
@@ -44,3 +52,9 @@ button {
     justify-content: space-between;
 }
 
+.top-left,
+.bottom-right {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
